Add Hello spline section

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,7 +17,7 @@
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
+    /* --accent: 240 4.8% 95.9%; */
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
@@ -26,7 +26,7 @@
     --ring: 240 5.9% 10%;
     --radius: 0.75rem;
     --gap: 1rem;
-    --accent: rgb(0, 239, 166);
+    --accent: #00efa6;
   }
 
   .dark {
@@ -42,7 +42,7 @@
     --secondary-foreground: 0 0% 98%;
     --muted: 240 3.7% 15.9%;
     --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
+    /* --accent: 240 3.7% 15.9%; */
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
@@ -114,7 +114,6 @@ html {
 
 .blur {
   filter: blur(10px);
-  /* Adjust the blur intensity as needed */
 }
 
 .gradient {
