--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -174,3 +174,47 @@ html {
     transform: rotate(360deg);
   }
 }
+
+
+
+
+/* STEAM ANIMATION */
+
+.steam {
+  position: relative;
+
+  background: black
+}
+
+.steam:before,
+.steam:after {
+  content: '';
+  position: absolute;
+  left: -2px;
+  top: -2px;
+  background: linear-gradient(45deg, #fb0094, #0000ff, #00ff00, #ffff00, #ff0000, #fb0094,
+      #0000ff, #00ff00, #ffff00, #ff0000);
+  background-size: 400%;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  z-index: -1;
+  animation: steam 20s linear infinite;
+}
+
+.steam:after {
+  filter: blur(50px);
+}
+
+@keyframes steam {
+  0% {
+    background-position: 0 0;
+  }
+
+  50% {
+    background-position: 400% 0;
+  }
+
+  100% {
+    background-position: 0 0;
+  }
+}
