--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,6 +51,30 @@
   }
 }
 
+/* LENIS SCROLL START */
+html.lenis,
+html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
+
+/* LENIS SCROLL END */
+
 /* geist */
 @font-face {
   font-family: "geist";
