--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -185,7 +185,6 @@ html {
   }
 }
 
-
 .rotate-animation {
   animation: rotate 4s linear infinite;
 }
@@ -200,25 +199,33 @@ html {
   }
 }
 
-
-
-
 /* STEAM ANIMATION */
 
 .steam {
   position: relative;
 
-  background: black
+  background: black;
 }
 
 .steam:before,
 .steam:after {
-  content: '';
+  content: "";
   position: absolute;
   left: -2px;
   top: -2px;
-  background: linear-gradient(45deg, #fb0094, #0000ff, #00ff00, #ffff00, #ff0000, #fb0094,
-      #0000ff, #00ff00, #ffff00, #ff0000);
+  background: linear-gradient(
+    45deg,
+    #fb0094,
+    #0000ff,
+    #00ff00,
+    #ffff00,
+    #ff0000,
+    #fb0094,
+    #0000ff,
+    #00ff00,
+    #ffff00,
+    #ff0000
+  );
   background-size: 400%;
   width: calc(100% + 4px);
   height: calc(100% + 4px);
